fix taglist wrap

--- a/app/assets/stylesheets/application/components/taglist.scss
+++ b/app/assets/stylesheets/application/components/taglist.scss
@@ -1,5 +1,7 @@
 .taglist {
   display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 12px;
   font-size: 18px;
   font-weight: 600;
